# sbom-archiver

./: LICENSE  README.md  pyproject.toml  sbom-archiver.ini
sbom_archiver/: __init__.py  wsgi.py
