[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-archiver"
description = "Webhook service to archive SBOMs"
version = "2025.7.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["SBOM", "Webhook"]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "flask",
    "requests",
    "gitpython",
]

[project.urls]
"Homepage" = "https://tuerantuer.org"
"Bug Tracker" = "https://github.com/digitalfabrik/sbom-archiver/issues"
"Source Code" = "https://github.com/digitalfabrik/sbom-archiver"

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
include = ["sbom_archiver/*"]

[tool.black]
    skip-magic-trailing-comma = true

[tool.bumpver]
current_version = "2025.7.0"
version_pattern = "YYYY.MM.INC0[-TAG]"
commit_message = "Bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

[tool.isort]
known_first_party = "sbom_archiver"
include_trailing_comma = true
line_length            = 88
multi_line_output      = 3

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
]
enable = ["useless-suppression"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.reports]
output-format = "colorized"

[tool.pytest.ini_options]
addopts = [
    "--quiet",
    "--cov=sbom_archiver",
    "--cov-report=html",
    "--disable-warnings",
]
